...
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Lobby Details -->
        <TextView
            android:id="@+id/lobbyNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lobby Name:" />

        <TextView
            android:id="@+id/gameTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Game Type: Baccarat" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/dealer_card_1"
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_background"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n" />

                <TextView
                    android:id="@+id/dealer_card_2"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/dealer_card_3"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/dealer_card_4"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/dealer_card_5"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/dealer_card_6"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />
            </LinearLayout>

            <TextView
                android:id="@+id/dealerScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dealer Score:" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/player_card_1"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/player_card_2"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/player_card_3"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/player_card_4"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/player_card_5"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />

                <TextView
                    android:id="@+id/player_card_6"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="\n"
                    android:background="@drawable/card_background" />
            </LinearLayout>

            <TextView
                android:id="@+id/playerScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Table Score:" />

        </LinearLayout>


        <!-- Chat Section -->
        <TextView
...
