...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Players Ready: 3/5" />

    <!-- Input for placing bets -->
    <EditText
        android:id="@+id/etPlaceBet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Place Bets"
        android:inputType="number"
        />

...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btnPlayersWin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Players Win" />

        <Button
            android:id="@+id/btnDealerWins"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
...
        android:id="@+id/tvPlaceBets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/btnPlaceBetsReadyUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Place Bets and Ready Up" />

    <!-- Chat Section -->
    <TextView
        android:id="@+id/tvLobbyChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
