<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Horizontal layout for userProfileButton and logoutButton -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/userProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UserName" />

        <!-- Use a spacer View to push the logoutButton to the right -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log Out" />

    </LinearLayout>

    <!-- Button to navigate to lobbies -->
    <Button
        android:id="@+id/navigateToLobbiesButton"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Go to Lobbies" />

    <Button
        android:id="@+id/createLobby"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Create Lobby" />

</LinearLayout>

